--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "graphql-request": "^7.1.2",
     "lucide-react": "^0.469.0",
     "moment": "^2.30.1",
-    "next": "15.1.2",
+    "next": "^15.1.3",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
     "react": "^18.0.0",
